// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webpack default 1`] = `
Array [
  "babel.config.js",
  "package.json",
  "src/index.js",
  "src/styles.scss",
  "src/wait.js",
  "webpack.config.js",
]
`;

exports[`webpack webpack-with-ts 1`] = `
Array [
  "package.json",
  "src/index.ts",
  "src/polyfill.ts",
  "src/styles.scss",
  "src/wait.ts",
  "tsconfig.json",
  "webpack.config.js",
]
`;
